<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pietrzyk.sqlite1.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_activ_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/settings_activity_main_settings_pl"
                android:id="@+id/textView3" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="vertical"
            android:id="@+id/settings_layout_currency"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/settings_activity_currency_pl"
                android:id="@+id/settings_activity_currency_txt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/settings_activity_currency_selected"
                android:text="GBP"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/statistic_separate_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/settings_layout_distance_units"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/settings_activity_distance_units_pl"
                android:id="@+id/settings_activity_distance_units_txt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/settings_activity_distance_units_selected"
                android:text="Kilometry"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/statistic_separate_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/settings_layout_fuel_cap"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/settings_activity_fuel_cap_pl"
                android:id="@+id/settings_activity_fuel_cap_txt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/settings_activity_fuel_cap_selected"
                android:text="Litry"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/statistic_separate_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:id="@+id/settings_layout_fuel_units"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="@string/settings_activity_fuel_units_pl"
                android:id="@+id/settings_activity_fuel_units_txt"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/settings_activity_fuel_units_selected"
                android:text="l/100km"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/statistic_separate_line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="vertical"
            android:id="@+id/settings_layout_licenses"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:text="Licencje Open Source"
                android:id="@+id/settings_activity_licenses_txt"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/statistic_separate_line" />



    </LinearLayout>


</LinearLayout>
